--- a/android/build.gradle
+++ b/android/build.gradle
@@ -120,3 +120,7 @@ idea {
         }
     }
 }
+dependencies {
+    compile files('libs/json-simple-1.1.jar')
+    compile files('libs/org.json.jar')
+}
