--- a/android/build.gradle
+++ b/android/build.gradle
@@ -16,7 +16,7 @@ android {
     }
     defaultConfig {
         applicationId "com.mygdx.game"
-        minSdkVersion 8
+        minSdkVersion 9
         targetSdkVersion 23
     }
 }
@@ -123,4 +123,5 @@ idea {
 dependencies {
     compile files('libs/json-simple-1.1.jar')
     compile files('libs/org.json.jar')
+    compile 'com.google.android.gms:play-services-ads:8.4.0'
 }
